<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_rel_layout"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    tools:context="com.hritupon.nostalgia.SpeechRecordActivity">
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
        android:id="@+id/speakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="?attr/colorBackgroundFloating"
        android:text="@string/speaker_button_text"
        tools:elevation="24dp"
        android:layout_weight="0.17" />

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

    <EditText
        android:id="@+id/showVoiceOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_msg"
        android:textSize="31sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorBackgroundFloating"
        android:text="@string/save_button_text" />
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/myStoriesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myStories_button_text"
                tools:backgroundTint="?attr/colorBackgroundFloating" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_button_text"
                tools:backgroundTint="?attr/colorBackgroundFloating" />

        </LinearLayout>


</LinearLayout>
